# same-mfc

./: CMakeLists.txt  SameGameTest.sln
SameGameTest/: AboutDialog.cpp  AboutDialog.h  MainFrm.cpp  OptionDialog.cpp  OptionDialog.h  Resource.h  SameGameBoard.cpp  SameGameBoard.h  SameGameTest.cpp  SameGameTest.h  SameGameTest.rc  SameGameTest.vcxproj  SameGameTest.vcxproj.filters  SameGameTestDoc.cpp  SameGameTestDoc.h  SameGameTestView.cpp  SameGameTestView.h
src/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  MainFrm.cpp  MainFrm.h  OptionDialog.cpp  OptionDialog.h  SameGameBoard.cpp  SameGameBoard.h  SameGameTest.cpp  SameGameTest.h  SameGameTestDoc.cpp  SameGameTestDoc.h  SameGameTestView.cpp  SameGameTestView.h  resource.h
src/res/: SameGameTest.rc2
